Fixed margin on study and group pages. Table was originally overlapping the sidebar.

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -73,6 +73,8 @@ button.studypage {
   list-style: none;
   margin: 0;
   padding: 0;
+}
 
-
+.smallrow {
+  margin-left: 0;
 }
